# jerasure-rs

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish_crate.yml  rust.yml
src/: erasure.rs  galois.rs  lib.rs
tests/: erasure.rs  galois.rs
