[package]
name = "jerasure-rs"
version = "0.4.4"
edition = "2024"
license = "MIT"
description = "Rust bindings to the `jerasure` and `gf-complete` library"
repository = "https://github.com/LokyinZHAO/jerasure-rs"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["jerasure", "gf-complete", "bindings"]
authors = ["Lokyin ZHAO <lokyinzhao.work@icloud.com>"]
exclude = [
    ".github/*",
    "var/*",
    ".cz.toml",
    ".gitignore",
    ".pre-commit-config.yaml",
    "Cargo.lock",
]


[dependencies]
iter_tools = "0.29.0"
jerasure-sys = "1.0.2"
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.9.1"
